[tool.poetry]
name = "graphdb-hub"
version = "0.1.0"
description = ""
authors = ["rcolinp <rcpiombino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
spacy = "3.1.3"
spacy-lookups-data = "^1.0.3"
requests = "^2.27.1"
SQLAlchemy = "^1.4.36"
pysqlite3 = "^0.4.7"
spacy-transformers = "^1.1.5"
pronto = "^2.4.5"
neo4j = "^4.4.3"
graphdatascience = "^1.0.0"
scikit-learn = "^0.24.0"
tqdm = "^4.64.0"
rfc3986 = "^2.0.0"
prefixcommons = "^0.1.9"
rdflib = "^6.1.1"
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0.tar.gz" }
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
black = "^22.3.0"
autopep8 = "^1.6.0"
python-dotenv = "^0.20.0"
ipykernel = "^6.13.0"
typing-extensions = "^4.2.0"
toml = "^0.10.2"
jupyter = "^1.0.0"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
